// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EscrowedPaymentReminderSummaryNotification renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      Object {
        "elevation": 12,
        "shadowColor": "rgba(156, 164, 169, 0.4)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      Array [
        Object {
          "height": 144,
        },
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": 40,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/notification-invite.png",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 18,
            "lineHeight": 22,
            "marginBottom": 4,
          }
        }
        testID="undefined/Title"
      >
        escrowedPaymentReminderSummaryTitle
      </Text>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#81868B",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
        testID="undefined/Details"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="undefined/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="undefined/CallToActions/viewAll/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "height": 16,
                  "lineHeight": 16,
                  "marginRight": 24,
                  "minWidth": 48,
                },
              ]
            }
          >
            viewAll
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more 1 requests renders just it alone 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "padding": 16,
          },
          Object {
            "borderRadius": 8,
          },
          Object {
            "elevation": 12,
            "shadowColor": "rgba(156, 164, 169, 0.4)",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 12,
          },
          Array [
            Object {
              "height": 144,
            },
            Object {},
          ],
        ]
      }
      testID="EscrowedPaymentListItem"
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 13,
                "lineHeight": 16,
                "marginBottom": 4,
              }
            }
            testID="EscrowedPaymentListItem/Title"
          >
            escrowPaymentNotificationTitle
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 24,
                "lineHeight": 28,
                "marginBottom": 2,
              }
            }
            testID="EscrowedPaymentListItem/Amount"
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              9.31
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
            testID="EscrowedPaymentListItem/Details"
          >
            test message
          </Text>
        </View>
        <View
          style={Object {}}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "#7AD6FE",
                    "borderRadius": 20,
                    "height": 40,
                    "width": 40,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 16,
                    },
                    Object {
                      "fontSize": 20,
                    },
                  ]
                }
              >
                +
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="EscrowedPaymentListItem/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="EscrowedPaymentListItem/CallToActions/global:remind/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "height": 16,
                  "lineHeight": 16,
                  "marginRight": 24,
                  "minWidth": 48,
                },
              ]
            }
          >
            global:remind
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="EscrowedPaymentListItem/CallToActions/global:reclaim/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "height": 16,
                  "lineHeight": 16,
                  "marginRight": 24,
                  "minWidth": 48,
                },
              ]
            }
          >
            global:reclaim
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more than 2 requests renders just two 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      Object {
        "borderRadius": 8,
      },
      Object {
        "elevation": 12,
        "shadowColor": "rgba(156, 164, 169, 0.4)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      Array [
        Object {
          "height": 144,
        },
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": 40,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/notification-invite.png",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 18,
            "lineHeight": 22,
            "marginBottom": 4,
          }
        }
        testID="undefined/Title"
      >
        escrowedPaymentReminderSummaryTitle
      </Text>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#81868B",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
        testID="undefined/Details"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="undefined/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="undefined/CallToActions/viewAll/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "height": 16,
                  "lineHeight": 16,
                  "marginRight": 24,
                  "minWidth": 48,
                },
              ]
            }
          >
            viewAll
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
